Date: 10 June Course Dashboard initialized Test Box done, separete component remaining Glimpse Leaderboard missing on course dashboard

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,8 +7,7 @@
 }
 
 body {
-  font-family: 'Roboto', Helvetica, Arial,
-    sans-serif;
+  font-family: 'Roboto', Helvetica, Arial, sans-serif;
   font-size: 0.8125rem;
   font-weight: 400;
   line-height: 1.25rem;
@@ -49,4 +48,24 @@ keygen,
 select,
 button {
   font: inherit;
+}
+
+@layer components {
+  .text-style {
+    @apply text-sm font-medium leading-5 tracking-sm;
+  }
+
+  .text-style-1 {
+    font-family: Roboto sans-serif;
+    font-size: 0.75rem;
+    @apply font-normal leading-4 tracking-wide;
+  }
+
+  .flex-row-container {
+    @apply flex flex-row items-center;
+  }
+
+  .text-wrapping {
+    @apply block overflow-hidden text-ellipsis whitespace-nowrap;
+  }
 }
