--- a/app/globals.css
+++ b/app/globals.css
@@ -50,6 +50,11 @@ button {
   font: inherit;
 }
 
+form {
+  margin: 0;
+  padding: 0;
+}
+
 @layer components {
   .text-style {
     @apply text-sm font-medium leading-5 tracking-sm;
