--- a/app/globals.css
+++ b/app/globals.css
@@ -61,7 +61,7 @@ textarea {
   font-size: inherit;
   resize: none;
   outline: none;
-  overflow-y: auto
+  overflow-y: auto;
 }
 
 @layer components {
@@ -84,7 +84,7 @@ textarea {
   }
 
   .text-heading {
-    @apply font-bold text-xl leading-5 tracking-sm
+    @apply text-xl font-bold leading-5 tracking-sm;
   }
 
   .table-box {
