Database connection for signup added
--> Signup related inputs handling added
--> Valid input checking added
--> Database request to create user added
--> User redirection to home page upon successful user creation
--> TODO: displaying appropriate message for invalid inputs
--> TODO: appropriate actions on request failure

--- a/app/globals.css
+++ b/app/globals.css
@@ -42,6 +42,27 @@ ol {
   padding: 0;
 }
 
+[type='text']:focus,
+[type='email']:focus,
+[type='url']:focus,
+[type='password']:focus,
+[type='number']:focus,
+[type='date']:focus,
+[type='datetime-local']:focus,
+[type='month']:focus,
+[type='search']:focus,
+[type='tel']:focus,
+[type='time']:focus,
+[type='week']:focus,
+[multiple]:focus,
+textarea:focus,
+select:focus {
+  outline: none;
+  outline-offset: 0;
+  border: none;
+  box-shadow: none;
+}
+
 input,
 textarea,
 keygen,
